--- a/inventory.ini
+++ b/inventory.ini
@@ -1,24 +1,19 @@
-[dns_master]
-192.168.100.10 ansible_user=debian
-
-[dns_slave]
-192.168.100.11 ansible_user=debian
+[dns]
+dns-master ansible_host=192.168.56.10
+dns-slave ansible_host=192.168.56.11
 
 [mail]
-192.168.100.12 ansible_user=debian
+mail ansible_host=192.168.56.12
 
-[web_servers]
-192.168.100.20 ansible_user=debian
-192.168.100.21 ansible_user=debian
+[web]
+web1 ansible_host=192.168.56.20
+web2 ansible_host=192.168.56.21
 
 [proxy]
-192.168.100.22 ansible_user=debian
+proxy ansible_host=192.168.56.22
 
-[gateways]
-192.168.100.1 ansible_user=vyos
+[router]
+gateway ansible_host=192.168.56.1
 
-[container_hosts]
-192.168.100.30 ansible_user=debian
-
-[all:vars]
-ansible_python_interpreter=/usr/bin/python3
+[containers]
+container ansible_host=192.168.56.30
